<resources>
    <string name="app_name">ShouldShip</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="title_activity_historic">HistoricActivity</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_compare">CompareActivity</string>
    <string name="planeEmoji" translatable="false">&#128747;</string>
    <string name="boatEmoji" translatable="false">&#128674;</string>
    <string name="trainEmoji" translatable="false">&#128642;</string>
    <string name="truckEmoji" translatable="false">&#128666;</string>

    <!-- ######### A l'affichage ########-->
    <!-- Texte Menu -->
    <string name="bouton_nouvelle_estimation">Nouvelle estimation</string>
    <string name="bouton_main">Accueil</string>
    <string name="bouton_compare">Comparer</string>
    <string name="bouton_estimations">Estimations</string>
    <string name="bouton_historique">Historique</string>
    <string name="menu_quitter">Quitter</string>

    <!-- Texte formulaire -->
    <string name="label_poids">Poids : </string>
    <string name="hint_poids">Poids du paquet</string>
    <string name="label_distance">Distance : </string>
    <string name="hint_distance">Distance à parcourir</string>
    <string name="label_transport">Transport</string>
    <string name="radio_train">Train</string>
    <string name="radio_avion">Avion</string>
    <string name="radio_camion">Camion</string>
    <string name="radio_bateau">Bateau</string>
    <string name="bouton_estimer">Estimer</string>

    <!-- Titres -->
    <string name="titreHistoric">Historique</string>
    <string name="titreEstimation">Estimation</string>
    <string name="titreComparer">Compater</string>
    <string name="titreAcceuil">Acceuil</string>

    <!-- Historique -->
    <string name="label_date">Date de l\'estimation : </string>
    <string name="label_carbone">Masse (en kg) de carbone émis : </string>
    <string name="errorMessageHistoricLoad">Impossible de charger l\'historique</string>
    <string name="titreHistoriqueCompare1">1er shipping</string>
    <string name="titreHistoriqueCompare2">2eme shipping</string>

    <!-- Strings à l'affichage -->
    <string name="landscape_mode_off">Tournez votre téléphone en mode payage pour voir le résultat !</string>
    <string name="landscape_mode_on">Bravoo !!</string>
    <string name="meilleur_compare">Le meilleur shipping est : </string>
    <string name="egalite_compare">EGALITE</string>
    <string name="estimationActivityOnResultFailureText">échec de l\'estimation, réessayez plus tard !</string>
    <string name="totalEstimationLabel">"Coût carbone : "</string>
    <string name="massLabel">Poid</string>
    <string name="distanceLabel">Distance</string>
    <string name="label_nom">Nom</string>
    <string name="hint_nom">Nom de l\'estimation</string>
</resources>