<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/label_poids"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/label_poids"
        app:layout_constraintStart_toEndOf="parent"/>

    <TextView
        android:id="@+id/label_distance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/label_distance"
        app:layout_constraintStart_toEndOf="@id/label_poids" />

    <TextView
        android:id="@+id/label_transport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/label_transport"
        app:layout_constraintStart_toEndOf="@id/label_distance"/>



</androidx.constraintlayout.widget.ConstraintLayout>