<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:rowCount="4">

        <Button
            android:id="@+id/BtnEstimations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_estimations"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/BtnComparer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_compare"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BtnEstimations" />

        <Button
            android:id="@+id/BtnHistorique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_historique"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button11" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>