<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompareActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landscape_mode_off"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/nom_compare1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/compare_label_carbone1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_carbone"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/compare_carbone1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/compare_label_date1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_date"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/compare_date1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nom_compare2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/compare_label_carbone2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_carbone"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/compare_carbone2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/compare_label_date2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_date"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/compare_date2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>